<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quake Report</string>
    <string name="no_earthquakes">No earthquakes found.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Earthquake Settings</string>


    <!-- Strings for Min Magnitude preference 2nd one (in EditTextPreference in arrays.xml) -->
    <!-- 3 things ...label,key,default...default is actually a value -->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key">min_magnitude</string>
    <string name="settings_min_magnitude_default">6</string>


    <!-- Strings For Order-By Preference [CHAR LIMIT=30] 1st one(in ListPreference in arrays.xml) -->
    <!-- 3 things ...label,key,default(value)...default is actually a value....key is missing for 2 OPTIONS -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_magnitude_value</string>

        <!-- Label for order-by magnitude option [CHAR LIMIT=20] . THESE 2 ARE INSIDE LIST_PREFERENCE -->
        <string name="settings_order_by_magnitude_label">Magnitude</string>
        <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string> <!-- this value will go inside query builder -->

        <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
        <string name="settings_order_by_most_recent_label">Most Recent</string>
        <string name="settings_order_by_most_recent_value" translatable="false">time</string> <!-- this value will go inside query builder -->

</resources>
